--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="forces_graph" style="position: absolute; bottom: 10vh; left: 15vw; z-index: 2; width: 20vw; height: 20vh; visibility: hidden;"></div>
     <div id="position_graph" style="position: absolute; bottom: 10vh; left: 40vw; z-index: 2; width: 20vw; height: 20vh; visibility: hidden;"></div>
-    <div id="trajectory_graph" style="position: absolute; bottom: 10vh; left: 65vw; z-index: 2; width: 20vw; height: 20vh; visibility: hidden;"></div>
+    <div id="trajectory_graph" style="position: absolute; bottom: 10vh; left: 65vw; z-index: 2; width: 20vw; height: 20vw; visibility: hidden;"></div>
     <canvas id="render_canvas" style="z-index: 1;"></canvas>
     
     <script type="module" src="/main.js"></script>
